Rename practitioner agreement to expert agreement
Renamed all references, routes, and content files from 'practitioner agreement' to 'expert agreement' across the codebase and updated translations, links, and document metadata accordingly. Added comprehensive legal and audit documentation for pgAudit and HIPAA compliance, including strategy, setup, and roadmap guides. Updated legal documentation references and navigation to reflect the new agreement naming and compliance strategy.

--- a/content/expert-agreement/en.mdx
+++ b/content/expert-agreement/en.mdx
@@ -1,10 +1,10 @@
-# Practitioner Service Agreement
+# Expert Service Agreement
 
 _Effective Date:_ April 16, 2025
 
-This Practitioner Service Agreement ("Agreement") is between **Búzios e Tartarugas, Lda.**, operating as **Eleva.care** ("Eleva.care," "we," "us," or "our"), and you, the healthcare practitioner ("Practitioner," "you," or "your").
+This Expert Service Agreement ("Agreement") is between **Búzios e Tartarugas, Lda.**, operating as **Eleva.care** ("Eleva.care," "we," "us," or "our"), and you, the independent healthcare expert ("Expert," "you," or "your").
 
-By creating a practitioner account and using our platform services, you agree to be bound by this Agreement.
+By creating an expert account and using our platform services, you agree to be bound by this Agreement.
 
 ---
 
