--- a/content/expert-agreement/es.mdx
+++ b/content/expert-agreement/es.mdx
@@ -1,10 +1,10 @@
-# Acuerdo de Servicio para Profesionales
+# Acuerdo de Servicio para Expertos
 
 _Fecha de Vigencia:_ 16 de abril de 2025
 
-Este Acuerdo de Servicio para Profesionales ("Acuerdo") se celebra entre **Búzios e Tartarugas, Lda.**, operando como **Eleva.care** ("Eleva.care," "nosotros," o "nuestro"), y usted, el profesional de salud ("Profesional," "usted," o "su").
+Este Acuerdo de Servicio para Expertos ("Acuerdo") se celebra entre **Búzios e Tartarugas, Lda.**, operando como **Eleva.care** ("Eleva.care," "nosotros," o "nuestro"), y usted, el experto de salud independiente ("Experto," "usted," o "su").
 
-Al crear una cuenta de profesional y utilizar nuestros servicios de plataforma, acepta estar sujeto a este Acuerdo.
+Al crear una cuenta de experto y utilizar nuestros servicios de plataforma, acepta estar sujeto a este Acuerdo.
 
 ---
 
