--- a/content/expert-agreement/br.mdx
+++ b/content/expert-agreement/br.mdx
@@ -1,10 +1,10 @@
-# Acordo de Serviço para Profissionais
+# Acordo de Serviço para Especialistas
 
 _Data de Vigência:_ 16 de abril de 2025
 
-Este Acordo de Serviço para Profissionais ("Acordo") é celebrado entre **Búzios e Tartarugas, Lda.**, operando como **Eleva.care** ("Eleva.care," "nós," ou "nosso"), e você, o profissional de saúde ("Profissional," "você," ou "seu").
+Este Acordo de Serviço para Especialistas ("Acordo") é celebrado entre **Búzios e Tartarugas, Lda.**, operando como **Eleva.care** ("Eleva.care," "nós," ou "nosso"), e você, o especialista de saúde independente ("Especialista," "você," ou "seu").
 
-Ao criar uma conta de profissional e utilizar nossos serviços de plataforma, você concorda em estar vinculado a este Acordo.
+Ao criar uma conta de especialista e utilizar nossos serviços de plataforma, você concorda em estar vinculado a este Acordo.
 
 ---
 
